# ChangeLog for dev-embedded/sdcc
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-embedded/sdcc/ChangeLog,v 1.14 2004/05/17 15:39:05 usata Exp $

  18 May 2004; Mamoru KOMACHI <usata@gentoo.org> sdcc-2.4.0.ebuild,
  sdcc-2.4.0_p20040304.ebuild, sdcc-2.4.0_p20040331.ebuild,
  sdcc-2.4.0_p20040507.ebuild:
  Changed app-text/tetex to virtual/tetex.

  10 May 2004; Daniel Black <dragonheart@gentoo.org>
  sdcc-2.4.0_p20040304.ebuild, sdcc-2.4.0_p20040331.ebuild:
  x86 stable

*sdcc-2.4.0_p20040507 (07 May 2004)

  07 May 2004; Daniel Black <dragonheart@gentoo.org> sdcc-2.4.0.ebuild,
  +sdcc-2.4.0_p20040507.ebuild:
  Version 2.4.0 x86 Keyword. Version bump to 2.4.0_p20040507

  15 Apr 2004; Danny van Dyk <kugelfang@gentoo.org> sdcc-2.4.0_p20040331.ebuild:
  marked ~amd64

  15 Apr 2004; Daniel Black <dragonheart@gentoo.org> sdcc-2.4.0.ebuild,
  sdcc-2.4.0_p20040304.ebuild:
  Remasked due to lyx being masked - thanks to mr bones

  14 Apr 2004; Daniel Black <dragonheart@gentoo.org> sdcc-2.4.0.ebuild,
  sdcc-2.4.0_p20040304.ebuild:
  Marked stable x86 & ppc

  04 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org>
  sdcc-2.4.0_p20040304.ebuild, sdcc-2.4.0_p20040331.ebuild:
  balance parens

*sdcc-2.4.0_p20040331 (03 Apr 2004)

  03 Apr 2004; Daniel Black <dragonheart@gentoo.org> sdcc-2.4.0.ebuild,
  sdcc-2.4.0_p20040304.ebuild, sdcc-2.4.0_p20040331.ebuild:
  Fixed lyx depend to version 1.3.4. Version bump to 20040331

  30 Mar 2004; Daniel Black <dragonheart@gentoo.org> sdcc-2.4.0.ebuild,
  sdcc-2.4.0_p20040304.ebuild:
  added RDEPEND to fix bug #44817. Thanks Spider <spider@gentoo.org>

  05 Mar 2004; David Holm <dholm@gentoo.org> sdcc-2.4.0_p20040304.ebuild:
  Added to ~ppc.

*sdcc-2.4.0 (05 Mar 2004)
*sdcc-2.4.0_p20040304 (05 Mar 2004)

  05 Mar 2004; Daniel Black <dragonheart@gentoo.org> metadata.xml,
  sdcc-2.4.0.ebuild, sdcc-2.4.0_p20040304.ebuild, sdcc-20040218.ebuild: