@@ -1,10 +1,12 @@
-MD5 18882659c36deca7a0915326939496a5 ChangeLog 2324
 MD5 7d36efc2d3cf66fe798832feb7034d92 metadata.xml 254
+MD5 18882659c36deca7a0915326939496a5 ChangeLog 2324
 MD5 ec35ca0a95c5427d9eefd61e95d86a25 sdcc-2.4.0.ebuild 1041
 MD5 75adc90ee1745b4e6f930930246def4a sdcc-2.4.0_p20040304.ebuild 1064
 MD5 5158e76d1c32a2396ebcbced6eb8b00d sdcc-2.4.0_p20040331.ebuild 1071
-MD5 9e2f0fcf44120fa3d058b22459127bfb sdcc-2.4.0_p20040507.ebuild 1072
+MD5 5b580129745c9c084f7af25921a2c0b1 sdcc-2.4.0_p20040507.ebuild 1071
+MD5 9e2f0fcf44120fa3d058b22459127bfb sdcc-2.4.0_p20040606.ebuild 1072
+MD5 be860dd165960980a4b42cc8d0ea657d files/digest-sdcc-2.4.0_p20040331 70
 MD5 bfc177a29ceb52dfa8883108634d1e7e files/digest-sdcc-2.4.0 63
 MD5 16ffff1d91865672c6157b851f8c7e3a files/digest-sdcc-2.4.0_p20040304 70
-MD5 be860dd165960980a4b42cc8d0ea657d files/digest-sdcc-2.4.0_p20040331 70
 MD5 15ba370f8589427bdced7bc50cd7f48e files/digest-sdcc-2.4.0_p20040507 70
+MD5 746d6df6bd806843345936959e624bd4 files/digest-sdcc-2.4.0_p20040606 70
