@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/sdcc/Attic/sdcc-2.4.0_p20040304.ebuild,v 1.9 2004/05/17 15:39:05 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/sdcc/Attic/sdcc-2.4.0_p20040606.ebuild,v 1.1 2004/06/07 09:19:56 dragonheart Exp $
 
 S=${WORKDIR}/${PN}
 MY_PV=${PV/*_p/}
@@ -11,7 +11,7 @@ HOMEPAGE="http://sdcc.sourceforge.net/"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="x86 ~ppc"
+KEYWORDS="~x86 ~ppc ~amd64"
 
 IUSE="doc"
 DEPEND="virtual/glibc
