@@ -1,6 +1,13 @@
 # ChangeLog for dev-embedded/sdcc
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/sdcc/ChangeLog,v 1.14 2004/05/17 15:39:05 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/sdcc/ChangeLog,v 1.15 2004/06/07 09:19:56 dragonheart Exp $
+
+*sdcc-2.4.0_p20040606 (07 Jun 2004)
+
+  07 Jun 2004; Daniel Black <dragonheart@gentoo.org>
+  -sdcc-2.4.0_p20040304.ebuild, sdcc-2.4.0_p20040507.ebuild,
+  +sdcc-2.4.0_p20040606.ebuild:
+  x86 stable, version bump
 
   18 May 2004; Mamoru KOMACHI <usata@gentoo.org> sdcc-2.4.0.ebuild,
   sdcc-2.4.0_p20040304.ebuild, sdcc-2.4.0_p20040331.ebuild,
